--- a/sitio/index.html
+++ b/sitio/index.html
@@ -10,7 +10,7 @@
 
 		<!-- </Estilos> -->
 
-		<title>EPS ACME</title>
+		<title>EPS X</title>
 		<link rel="stylesheet" href="">
 	</head>
 	<!--Auto update browser -->
@@ -18,12 +18,186 @@
 	<!--/-->
 	<body>
 			
+		<div class="navbar navbar-default navbar-fixed-top navbar-main navbar-inverse">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a href="javascript:void(0)" class="navbar-brand">
+						Sistema EPS
+					</a>
+				</div>
+			</div>
+		</div>
 		
+		<div class="jumbotron main-header">
+			<div class="container">
+				<h1 class="h1">
+					EPS X
+				</h1>
+				<p>
+					Nuevo sistema de información, ahora puede hacer sus trámites desde la comodidad de su hogar.
+				</p>
+			</div>
+		</div>
+
+		<div class="navbar navbar-default navbar-noticias-cursos">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-9 navbar-text">
+						Noticias
+					</div>
+					<div class="col-xs-2 navbar-text text-center">
+						Cursos
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-9" id="main-noticias">
+					<div class="main-noticia">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<a href="javascript:void(0)">
+									<h3 class="panel-title title-noticia">
+										titulo Lorem ipsum dolor sit amet.
+									</h3>
+								</a>
+								<span class="label panel-title fecha-noticia pull-right">
+									fecha_publicacion
+								</span>
+							</div>
+							<div class="panel-body">
+								<img class="main-img-noticia" src="http://placehold.it/150x150">
+								<h5 class="h5 text-justify">
+									encabezado Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam natus perspiciatis, aperiam, quidem nobis, maiores repudiandae numquam accusamus soluta ipsa officia delectus ratione reiciendis eveniet quam totam odit, tenetur voluptatibus perferendis ut at. Excepturi incidunt repudiandae, quisquam alias! Sed, cum iure soluta necessitatibus aspernatur amet unde, veritatis harum quisquam tenetur.
+								</h5>
+							</div>
+						</div>
+					</div>
+					
+					<div class="main-noticia">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<a href="javascript:void(0)">
+									<h3 class="panel-title title-noticia">
+										titulo Lorem ipsum dolor sit amet.
+									</h3>
+								</a>
+								<span class="label panel-title fecha-noticia pull-right">
+									fecha_publicacion
+								</span>
+							</div>
+							<div class="panel-body">
+								<img class="main-img-noticia" src="http://placehold.it/150x150">
+								<h5 class="h5 text-justify">
+									encabezado Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam natus perspiciatis, aperiam, quidem nobis, maiores repudiandae numquam accusamus soluta ipsa officia delectus ratione reiciendis eveniet quam totam odit, tenetur voluptatibus perferendis ut at. Excepturi incidunt repudiandae, quisquam alias! Sed, cum iure soluta necessitatibus aspernatur amet unde, veritatis harum quisquam tenetur.
+								</h5>
+							</div>
+						</div>
+					</div>
+					
+					<div class="main-noticia">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<a href="javascript:void(0)">
+									<h3 class="panel-title title-noticia">
+										titulo Lorem ipsum dolor sit amet.
+									</h3>
+								</a>
+								<span class="label panel-title fecha-noticia pull-right">
+									fecha_publicacion
+								</span>
+							</div>
+							<div class="panel-body">
+								<img class="main-img-noticia" src="http://placehold.it/150x150">
+								<h5 class="h5 text-justify">
+									encabezado Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam natus perspiciatis, aperiam, quidem nobis, maiores repudiandae numquam accusamus soluta ipsa officia delectus ratione reiciendis eveniet quam totam odit, tenetur voluptatibus perferendis ut at. Excepturi incidunt repudiandae, quisquam alias! Sed, cum iure soluta necessitatibus aspernatur amet unde, veritatis harum quisquam tenetur.
+								</h5>
+							</div>
+						</div>
+					</div>
+
+					<div class="main-noticia">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<a href="javascript:void(0)">
+									<h3 class="panel-title title-noticia">
+										titulo Lorem ipsum dolor sit amet.
+									</h3>
+								</a>
+								<span class="label panel-title fecha-noticia pull-right">
+									fecha_publicacion
+								</span>
+							</div>
+							<div class="panel-body">
+								<img class="main-img-noticia" src="http://placehold.it/150x150">
+								<h5 class="h5 text-justify">
+									encabezado Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam natus perspiciatis, aperiam, quidem nobis, maiores repudiandae numquam accusamus soluta ipsa officia delectus ratione reiciendis eveniet quam totam odit, tenetur voluptatibus perferendis ut at. Excepturi incidunt repudiandae, quisquam alias! Sed, cum iure soluta necessitatibus aspernatur amet unde, veritatis harum quisquam tenetur.
+								</h5>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="col-xs-3" id="main-eventos">
+					<a href="javascript:void(0)">
+						<div class="main-evento">
+							<span class="main-tit-evento">nombre Lorem ipsum.</span>
+							<br><br>
+							<p class="text-justify">descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum tempore officiis non debitis commodi aliquam tenetur, cumque obcaecati nisi earum!</p>
+							<span><strong>Cupos:</strong> numero_cupos</span>
+						</div>
+					</a>
+					<hr>
+
+					<a href="javascript:void(0)">
+						<div class="main-evento">
+							<span class="main-tit-evento">nombre Lorem ipsum.</span>
+							<br><br>
+							<p class="text-justify">descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum tempore officiis non debitis commodi aliquam tenetur, cumque obcaecati nisi earum!</p>
+							<span><strong>Cupos:</strong> numero_cupos</span>
+						</div>
+					</a>
+					<hr>
+
+					<a href="javascript:void(0)">
+						<div class="main-evento">
+							<span class="main-tit-evento">nombre Lorem ipsum.</span>
+							<br><br>
+							<p class="text-justify">descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum tempore officiis non debitis commodi aliquam tenetur, cumque obcaecati nisi earum!</p>
+							<span><strong>Cupos:</strong> numero_cupos</span>
+						</div>
+					</a>
+					<hr>
+
+					<a href="javascript:void(0)">
+						<div class="main-evento">
+							<span class="main-tit-evento">nombre Lorem ipsum.</span>
+							<br><br>
+							<p class="text-justify">descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum tempore officiis non debitis commodi aliquam tenetur, cumque obcaecati nisi earum!</p>
+							<span><strong>Cupos:</strong> numero_cupos</span>
+						</div>
+					</a>
+					<hr>
+
+					<a href="javascript:void(0)">
+						<div class="main-evento">
+							<span class="main-tit-evento">nombre Lorem ipsum.</span>
+							<br><br>
+							<p class="text-justify">descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum tempore officiis non debitis commodi aliquam tenetur, cumque obcaecati nisi earum!</p>
+							<span><strong>Cupos:</strong> numero_cupos</span>
+						</div>
+					</a>
+					<hr>
+				</div>
+			</div>
+		</div>
 
 		<!-- <Scripts> -->
 		<script src="libs/jquery/jquery-2.1.4.min.js"></script>
 		<script src="libs/bootstrap/js/bootstrap.min.js"></script>
-		
+		<script src="js/index.js"></script>
 		<!-- </Scripts> -->
 
 
