Maqueta detalle curso

--- a/sitio/noticias.html
+++ b/sitio/noticias.html
@@ -74,7 +74,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="navbar navbar-default navbar-fixed-top navbar-main navbar-inverse">
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -156,7 +156,7 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-9" id="main-noticias">
+				<div class="col-xs-9" id="noticia-contenido">
 					
 					<img class="noticia-imagen" src="http://placehold.it/300x300"></img>
 					<br>
