Correccion hipervinculos maquetas

--- a/sitio/cursos.html
+++ b/sitio/cursos.html
@@ -78,7 +78,7 @@
 		<div class="navbar navbar-default navbar-fixed-top navbar-main navbar-inverse">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a href="/epsWeb/" class="navbar-brand">
+					<a href="index.html" class="navbar-brand">
 						Sistema EPS
 					</a>
 				</div>
@@ -207,7 +207,7 @@
 					</div>
 				</div>
 				<div class="col-xs-3" id="main-eventos">
-					<a href="javascript:void(0)">
+					<a href="cursos.html">
 						<div class="main-evento">
 							<span class="main-tit-evento">nombre Lorem ipsum.</span>
 							<br><br>
@@ -217,7 +217,7 @@
 					</a>
 					<hr>
 
-					<a href="javascript:void(0)">
+					<a href="cursos.html">
 						<div class="main-evento">
 							<span class="main-tit-evento">nombre Lorem ipsum.</span>
 							<br><br>
@@ -227,7 +227,7 @@
 					</a>
 					<hr>
 
-					<a href="javascript:void(0)">
+					<a href="cursos.html">
 						<div class="main-evento">
 							<span class="main-tit-evento">nombre Lorem ipsum.</span>
 							<br><br>
@@ -237,7 +237,7 @@
 					</a>
 					<hr>
 
-					<a href="javascript:void(0)">
+					<a href="cursos.html">
 						<div class="main-evento">
 							<span class="main-tit-evento">nombre Lorem ipsum.</span>
 							<br><br>
@@ -247,7 +247,7 @@
 					</a>
 					<hr>
 
-					<a href="javascript:void(0)">
+					<a href="cursos.html">
 						<div class="main-evento">
 							<span class="main-tit-evento">nombre Lorem ipsum.</span>
 							<br><br>
@@ -263,7 +263,7 @@
 		<div class="navbar navbar-default navbar-noticias-volver">
 			<div class="container">
 				<div class="row">
-					<a href="/epsWeb/" class="col-xs-9 navbar-text">
+					<a href="index.html" class="col-xs-9 navbar-text">
 						Volver
 					</a>
 				</div>
