--- a/sitio/noticias.html
+++ b/sitio/noticias.html
@@ -78,7 +78,7 @@
 		<div class="navbar navbar-default navbar-fixed-top navbar-main navbar-inverse">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a href="/epsWeb/" class="navbar-brand">
+					<a href="index.html" class="navbar-brand">
 						Sistema EPS
 					</a>
 				</div>
@@ -168,7 +168,7 @@
 				</div>
 				<div class="col-xs-3" id="main-eventos">
 
-					<a href="javascript:void(0)">
+					<a href="noticias.html">
 						<div class="main-evento">
 							<span class="main-tit-evento">nombre Lorem ipsum.</span>
 							<br><br>
@@ -177,7 +177,7 @@
 					</a>
 					<hr>
 
-					<a href="javascript:void(0)">
+					<a href="noticias.html">
 						<div class="main-evento">
 							<span class="main-tit-evento">nombre Lorem ipsum.</span>
 							<br><br>
@@ -186,7 +186,7 @@
 					</a>
 					<hr>
 
-					<a href="javascript:void(0)">
+					<a href="noticias.html">
 						<div class="main-evento">
 							<span class="main-tit-evento">nombre Lorem ipsum.</span>
 							<br><br>
@@ -195,7 +195,7 @@
 					</a>
 					<hr>
 
-					<a href="javascript:void(0)">
+					<a href="noticias.html">
 						<div class="main-evento">
 							<span class="main-tit-evento">nombre Lorem ipsum.</span>
 							<br><br>
@@ -204,7 +204,7 @@
 					</a>
 					<hr>
 					
-					<a href="javascript:void(0)">
+					<a href="noticias.html">
 						<div class="main-evento">
 							<span class="main-tit-evento">nombre Lorem ipsum.</span>
 							<br><br>
@@ -219,7 +219,7 @@
 		<div class="navbar navbar-default navbar-noticias-volver">
 			<div class="container">
 				<div class="row">
-					<a href="/epsWeb/" class="col-xs-9 navbar-text">
+					<a href="index.html" class="col-xs-9 navbar-text">
 						Volver
 					</a>
 				</div>
