--- a/sitio/noticias.html
+++ b/sitio/noticias.html
@@ -128,7 +128,9 @@
 				</ul>
 			</div>
 		</div>
-		
+		<div class="jumbotron">
+			
+		</div>
 		<div class="jumbotron noticia-header">
 			<div class="container">
 				<br>
