--- a/sitio/vistas/afiliado/index.html
+++ b/sitio/vistas/afiliado/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Afiliado EPS</title>
 
     <link rel="stylesheet" href="../../libs/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/generalStyle.css">
@@ -113,22 +113,19 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="javascript:void(0)">Solicitar servicio <span class="sr-only">(current)</span></a></li>
-            <li><a href="javascript:void(0)">Reports</a></li>
-            <li><a href="javascript:void(0)">Analytics</a></li>
-            <li><a href="javascript:void(0)">Export</a></li>
+            <li class="active"><a href="index.html">Solicitar servicio <span class="sr-only">(current)</span></a></li>
+            <li><a href="cursos.html">Ver cursos</a></li>
+            <li><a href="medicamentos.html">Ver medicamentos</a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li><a href="">Nav item</a></li>
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-            <li><a href="">More navigation</a></li>
+            <li><a href="citas-pendientes.html">Citas pendientes</a></li>
+            <li><a href="citas-historial.html">Historial de citas</a></li>
+            <li><a href="citas-calificar">Citas por calificar</a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
+            <li><a href="multas.html">Multas</a></li>
+            <li><a href="llamados-atencion.html">Historial de llamados de atención</a></li>
+            <li><a href="sanciones.html">Historial de sanciones</a></li>
           </ul>
         </div>
 
@@ -159,7 +156,7 @@
               </div>
             </div>
             <div class="col-xs-9" id="cita-horarios-div">
-              <h4 class="h4">
+              <h4 class="h4" id="txthdisp">
                 Horarios disponibles
               </h4>
               <hr>
