Evento inscripcion afiliado

--- a/sitio/vistas/afiliado/cursos.html
+++ b/sitio/vistas/afiliado/cursos.html
@@ -50,7 +50,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-            <button id="curso-enviar" class="btn btn-primary">
+            <button id="curso-inscribir" class="btn btn-primary">
               Confirmar
             </button>
           </div>
