--- a/sitio/vistas/afiliado/citas-pendientes.html
+++ b/sitio/vistas/afiliado/citas-pendientes.html
@@ -33,53 +33,27 @@
 
     <!--Modal zone-->
 
-    <div class="modal" id="modal-solicitar-servicio">
+    <div class="modal" id="modal-curso">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">
               <span aria-hidden="true">&times;</span>
             </button>
-            <h4 class="modal-title">Solicitar atención</h4>
+            <h4 class="modal-title">Confirmar curso</h4>
           </div>
-          <form class="form" autocomplete="off" id="cita-form">
-            <div class="modal-body">
+          <div class="modal-body">
               <div class="col-xs-8 col-xs-offset-2">
-                <h4 class="h4">
-                  <strong>Profesional: </strong>
-                  <span id="cita-doctor">nombre doctor</span>  
-                </h4>
-                <h4 class="h4">
-                  <strong>Área: </strong>
-                  <span id="cita-area">nombre area</span>  
-                </h4>
-                <h4 class="h4">
-                  <strong>Fecha: </strong>
-                  <span id="cita-fecha">fecha cita</span>  
-                </h4>
-                <hr>
-                <div class="form-group">
-                  <label for="cita-duracion">Duración</label>
-                  <input id="cita-duracion" class="form-control" type="number" placeholder="Duración(miutos)" required>
-                </div>
-                <div class="form-group">
-                  <label for="cita-tipoatencion">Tipo de atención</label>
-                  <select id="cita-tipoatencion" class="form-control" type="text" required>
-                    <option value=""></option>
-                    <option value="general">General</option>
-                    <option value="control">Control</option>
-                  </select>
-                </div>
+                <h3 class="h3" id="modal-curso-nombre"></h3>
               </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" id="cita-cancelar">Cancelar</button>
-              <button id="cita-enviar" class="btn btn-primary">
-                Enviar solicitud
-              </button>
-            </div>
-          </form>
+            <div class="clearfix"></div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+            <button id="curso-inscribir" class="btn btn-primary">
+              Confirmar
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -113,12 +87,12 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="index.html">Solicitar servicio <span class="sr-only">(current)</span></a></li>
+            <li><a href="index.html">Solicitar servicio <span class="sr-only">(current)</span></a></li>
             <li><a href="cursos.html">Ver cursos</a></li>
             <li><a href="medicamentos.html">Ver medicamentos</a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li><a href="citas-pendientes.html">Citas pendientes</a></li>
+            <li class="active"><a href="citas-pendientes.html">Citas pendientes</a></li>
             <li><a href="citas-historial.html">Historial de citas</a></li>
             <li><a href="citas-calificar">Citas por calificar</a></li>
           </ul>
@@ -130,45 +104,60 @@
         </div>
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Solicitar servicio</h1>
 
+          <!--Contenido que cambia-->
+
+          <h1 class="page-header">Citas</h1>
+          <h3 class="sub-header">Citas pendientes</h3>
           <div class="row">
             <div class="col-xs-8 col-xs-offset-2">
-            <h3 class="h3">Escoja un área de la salud para su cita:</h3>
-              <select class="form-control" id="cita-area-sel">
-                <option value="" selected></option>
-                <option value="general">Consulta general</option>
-                <option value="medicina">Medicina</option>
-                <option value="odontologia">Odontología</option>
-                <option value="psicologia">Psicología</option>
-              </select>
+              <div class="form-inline">
+                <div class="form-group">
+                  <label for="cita-pendiente-area-sel"><h3>Área:</h3></label>
+                  &nbsp&nbsp&nbsp
+                  <select class="form-control" id="cita-pendiente-area-sel">
+                    <option value="general">Consulta general</option>
+                    <option value="medicina">Medicina</option>
+                    <option value="odontologia">Odontología</option>
+                    <option value="psicologia">Psicología</option>
+                  </select>
+                </div>
+              </div>
             </div>
           </div>
           <hr>
           <div class="row">
-            <div class="col-xs-3" id="cita-profesionales-div">
-              <h4 class="h4">
-                Profesionales del área
-              </h4>
-              <hr>
-              <div class="list-group" id="cita-profesionales-list">
-                <!--Dinámico-->
+            <div class="col-xs-8 col-xs-offset-2">
+              <div id="citas-lista">
+                
+                <!--Generado-->
+                  <div class="panel panel-default cita-afiliado-panel">
+                    <div class="panel-body">
+                      <div class="row">
+                          <h4 class=" col-xs-4 h4">
+                            Fecha: fecha - hora
+                          </h4>  
+                          <div class="col-xs-5 col-xs-offset-3">
+                            <h4 class="h4 pull-right">
+                              Tipo
+                            </h4>  
+                          </div>
+                      </div>
+                      <hr>
+                      <h4 class="h4">Doctor Lorem ipsum dolor.</h4>
+                    </div>
+                  </div>
+                </div>
+
+
               </div>
             </div>
-            <div class="col-xs-9" id="cita-horarios-div">
-              <h4 class="h4" id="txthdisp">
-                Horarios disponibles
-              </h4>
-              <hr>
-              <div class="list-group" id="cita-horarios-list">
-                <!--Dinámico-->
-              </ul>
-            </div>
           </div>
-        </div>
-      </div>
-    </div>
 
+          <!--/Contenido que cambia-->
+
+        </div>
+        
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -176,6 +165,6 @@
     <script src="../../libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../libs/geturlvars.js"></script>
 
-    <script src="../../js/afiliadoSolicitarServicio.js"></script>
+    <script src="../../js/afiliadoPendientes.js"></script>
   </body>
 </html>
