--- a/sitio/vistas/afiliado/cursos.html
+++ b/sitio/vistas/afiliado/cursos.html
@@ -75,7 +75,7 @@
             Sesión activa como: nombre
           </li>
           <li>
-            <a href="index.html">
+            <a href="../../index.html">
               Cerrar sesión
             </a>
           </li>
@@ -113,98 +113,9 @@
             <div class="col-xs-8 col-xs-offset-2">
               <div id="lista-cursos">
                 
-                <!--
-                <div class="afiliado-cursos">
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                    <h3 class="panel-title">Curso 1 Lorem ipsum dolor.</h3>
-                    </div>
-                    <div class="panel-body">
-                      <span>descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam eius beatae harum hic rem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, expedita.</span>
-                      <br><br>
-                      <span><strong>Cupos:</strong> n cupos </span>
-                      <br>
-                      <span><strong>Sitio:</strong> sitio </span>
-                      <br>
-                      <span><strong>Encargado:</strong> profesional </span>
-                      <hr>
-                      <h4 class="h4">Eventos: </h4><br>
-                      <ul class="list-group">
-                        <li class="list-group-item"><strong>Sesión 1: </strong>fecha - De horaInicio a horaFin</li>
-                        <li class="list-group-item"><strong>Sesión 2: </strong>fecha - De horaInicio a horaFin</li>
-                        <li class="list-group-item"><strong>Sesión 3: </strong>fecha - De horaInicio a horaFin</li>
-                        <li class="list-group-item"><strong>Sesión 4: </strong>fecha - De horaInicio a horaFin</li>
-                      </ul>
-                    </div>
-                    <div class="panel-footer">
-                      <button class="btn btn-primary pull-right">Inscribirse</button>
-                      <div class="clearfix"></div>
-                    </div>
-                  </div>
-                </div>
+              <!--Dinámico-->
 
-
-                <div class="afiliado-cursos">
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                    <h3 class="panel-title">Curso 1 Lorem ipsum dolor.</h3>
-                    </div>
-                    <div class="panel-body">
-                      <span>descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam eius beatae harum hic rem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, expedita.</span>
-                      <br><br>
-                      <span><strong>Cupos:</strong> n cupos </span>
-                      <br>
-                      <span><strong>Sitio:</strong> sitio </span>
-                      <br>
-                      <span><strong>Encargado:</strong> profesional </span>
-                      <hr>
-                      <h4 class="h4">Eventos: </h4><br>
-                      <ul class="list-group">
-                        <li class="list-group-item"><strong>Sesión 1: </strong>fecha - De horaInicio a horaFin</li>
-                        <li class="list-group-item"><strong>Sesión 2: </strong>fecha - De horaInicio a horaFin</li>
-                        <li class="list-group-item"><strong>Sesión 3: </strong>fecha - De horaInicio a horaFin</li>
-                        <li class="list-group-item"><strong>Sesión 4: </strong>fecha - De horaInicio a horaFin</li>
-                      </ul>
-                      <span class="curso-aviso-inscripcion pull-right">No cumple con los requisitos o se agotaron los cupos</span>
-                    </div>
-                    <div class="panel-footer">
-                      <button class="btn btn-danger pull-right" disabled ="disabled">No puede inscribirse</button>
-                      <div class="clearfix"></div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="afiliado-cursos">
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                    <h3 class="panel-title">Curso 1 Lorem ipsum dolor.</h3>
-                    </div>
-                    <div class="panel-body">
-                      <span>descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam eius beatae harum hic rem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, expedita.</span>
-                      <br><br>
-                      <span><strong>Cupos:</strong> n cupos </span>
-                      <br>
-                      <span><strong>Sitio:</strong> sitio </span>
-                      <br>
-                      <span><strong>Encargado:</strong> profesional </span>
-                      <hr>
-                      <h4 class="h4">Eventos: </h4><br>
-                      <ul class="list-group">
-                        <li class="list-group-item"><strong>Sesión 1: </strong>fecha - De horaInicio a horaFin</li>
-                        <li class="list-group-item"><strong>Sesión 2: </strong>fecha - De horaInicio a horaFin</li>
-                        <li class="list-group-item"><strong>Sesión 3: </strong>fecha - De horaInicio a horaFin</li>
-                        <li class="list-group-item"><strong>Sesión 4: </strong>fecha - De horaInicio a horaFin</li>
-                      </ul>
-                    </div>
-                    <div class="panel-footer">
-                      <button class="btn btn-success pull-right" disabled ="disabled">Ya está inscrito</button>
-                      <div class="clearfix"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+             </div>
 
           <!--/Contenido que cambia-->
         </div>
