Maqueta historial de citas

--- a/sitio/vistas/afiliado/index.html
+++ b/sitio/vistas/afiliado/index.html
@@ -120,7 +120,7 @@
           <ul class="nav nav-sidebar">
             <li><a href="citas-pendientes.html">Citas pendientes</a></li>
             <li><a href="citas-historial.html">Historial de citas</a></li>
-            <li><a href="citas-calificar">Citas por calificar</a></li>
+            <li><a href="citas-calificar.html">Citas por calificar</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="multas.html">Multas</a></li>
