--- a/sitio/vistas/afiliado/citas-historial.html
+++ b/sitio/vistas/afiliado/citas-historial.html
@@ -89,11 +89,11 @@
           <ul class="nav nav-sidebar">
             <li><a href="index.html">Solicitar servicio <span class="sr-only">(current)</span></a></li>
             <li><a href="cursos.html">Ver cursos</a></li>
-            <li class="active"><a href="medicamentos.html">Ver medicamentos</a></li>
+            <li><a href="medicamentos.html">Ver medicamentos</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="citas-pendientes.html">Citas pendientes</a></li>
-            <li><a href="citas-historial.html">Historial de citas</a></li>
+            <li  class="active"><a href="citas-historial.html">Historial de citas</a></li>
             <li><a href="citas-calificar.html">Citas por calificar</a></li>
           </ul>
           <ul class="nav nav-sidebar">
@@ -107,20 +107,20 @@
 
           <!--Contenido que cambia-->
 
-          <h1 class="page-header">Medicamentos</h1>
-          <h3 class="sub-header">Listado de medicamentos disponibles por categoría</h3>
+          <h1 class="page-header">Citas</h1>
+          <h3 class="sub-header">Historial de citas</h3>
           <div class="row">
             <div class="col-xs-8 col-xs-offset-2">
               <div class="form-inline">
                 <div class="form-group">
-                  <label for="categoria-med-sel"><h3>Categoría:</h3></label>
+                  <label for="cita-historial-area-sel"><h3>Área:</h3></label>
                   &nbsp&nbsp&nbsp
-                  <select class="form-control" id="categoria-med-sel">
-                    <option value="A">A</option>
-                    <option value="B">B</option>
-                    <option value="C">C</option>
-                    <option value="D">D</option>
-                    <option value="E">E</option>
+                  <select class="form-control" id="cita-historial-area-sel">
+                    <option value="todas">Todas</option>
+                    <option value="general">Consulta general</option>
+                    <option value="medicina">Medicina</option>
+                    <option value="odontologia">Odontología</option>
+                    <option value="psicologia">Psicología</option>
                   </select>
                 </div>
               </div>
@@ -128,9 +128,65 @@
           </div>
           <hr>
           <div class="row">
-            <div class="col-xs-10 col-xs-offset-1">
-              <div id="medicamentos-lista">
+            <div class="col-xs-8 col-xs-offset-2">
+              <div id="citas-lista">
                 
+                <!--Generado-->
+                  
+                 <div class="panel panel-default cita-afiliado-panel">
+                  <div class="panel-body">
+                    <div class="row">
+                      <h4 class="col-xs-4 h4">
+                        Fecha
+                      </h4>
+                      <div class="col-xs-5 col-xs-offset-3">
+                        <h4 class="pull-right h4">
+                          Tipo
+                        </h4>
+                      </div>
+                    </div>
+                    <hr>
+                    <h4>Profesional</h4>
+                    <h4>Area</h4>
+                    <h4>Pago: (si, cuanto?/no)</h4>
+                    <br>
+                    <button class="btn btn-default btn-diagnostico" type="button" id="diag-collapse-btn">
+                      Ver diagnostico y medicamentos
+                    </button>
+                    <div class="collapse collapse-diagnostico" id="diagnostico-collapse">
+                      <div class="well">
+                        <h4>Diagnósticos y notas</h4>
+                        <ul class="list-group">
+                          <li class="list-group-item">
+                            Diag 1
+                          </li>
+                          <li class="list-group-item">
+                            Diag 2
+                          </li>
+                          <li class="list-group-item">
+                            Diag 3
+                          </li>
+                        </ul>
+                        <br>
+                        <h4>Medicamentos</h4>
+                        <ul class="list-group">
+                          <li class="list-group-item">
+                            Med 1
+                          </li>
+                          <li class="list-group-item">
+                            Med 2
+                          </li>
+                          <li class="list-group-item">
+                            Med 3
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+
+                  </div>
+                </div> 
+
+
               </div>
             </div>
           </div>
@@ -146,6 +202,6 @@
     <script src="../../libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../libs/geturlvars.js"></script>
 
-    <script src="../../js/afiliadoMedicamentos.js"></script>
+    <script src="../../js/afiliadoHistorial.js"></script>
   </body>
 </html>
