--- a/sitio/vistas/afiliado/citas-historial.html
+++ b/sitio/vistas/afiliado/citas-historial.html
@@ -149,6 +149,7 @@
                     <h4>Profesional</h4>
                     <h4>Area</h4>
                     <h4>Pago: (si, cuanto?/no)</h4>
+                    <h4>Calificacion: X</h4>
                     <br>
                     <button class="btn btn-default btn-diagnostico" type="button" id="diag-collapse-btn">
                       Ver diagnostico y medicamentos
